HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestUnknownCoverageReference/Source/Main.uv
//! Rejected source-native test attribute specimen for an unknown obligation row anchor.

[[test(covers("def.TestAttributeArgsOk@L1"))]]
public procedure testUnknownCoverageReferenceReference() -> bool
|: => @result
{
    return true
}
